--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,10 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory:
-                users:
-                    demo:
-                        password: demo
-                        roles: ROLE_ADMIN
+        from_database:
+            entity:
+                class: App\Entity\User
+                property: username
 
     firewalls:
         dev:
@@ -14,14 +12,19 @@ security:
             security: false
         main:
             anonymous: true
+            logout:
+                path:    /logout
+                target:  /
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-            http_basic: true
+            # http_basic: true
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+            form_login:
+                check_path: login
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
@@ -30,4 +33,6 @@ security:
         # - { path: ^/profile, roles: ROLE_USER }
 
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        App\Entity\User:
+            algorithm: bcrypt
+            cost: 12
