--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,8 @@ security:
 
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+#            pattern: ^/(_(profiler|wdt)|css|images|js)/ TODO : why this uncomment line give me this message : The process has been signaled with signal "9"
+#                                                        TODO : but i don't need to login on admin
             security: false
         main:
             anonymous: true
@@ -29,8 +30,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+       # - { path: ^/profile, roles: ROLE_USER }
 
     encoders:
         App\Entity\User:
