--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,5 +1,10 @@
 vich_uploader:
     db_driver: orm
+    mappings:
+        property_image:
+                uri_prefix: /images/properties
+                upload_destination: '%kernel.project_dir%/public/images/properties'
+
 
     #mappings:
     #    products:
